# learnOpenCV

./: .gitignore
sphereDetect/: CMakeLists.txt  config.yaml  config2.yaml  sphereDetect.cpp
sphereDetect/src/: CMakeLists.txt  sphereDetect.cpp
